--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color:rgb(84, 123, 250);
+    background-color:rgba(137, 43, 226, 0.76);
     text-align:center;
     padding: 0px;
     margin:0px;
@@ -17,7 +17,6 @@ body {
     color: #ffffff;
     text-align: center;
     padding: 14px 16px;
-    text-decoration: none;
     font-size: 17px;
 }
   
@@ -30,10 +29,25 @@ body {
     display: flex;
     justify-content: center;
 }
-
 .data{
-    border:solid 15px rgb(120, 190, 255); 
+    border:solid 15px #00000071; 
     width: 350px; 
     padding:20px;
     text-align: left;
+}
+.footdiv{
+    text-align: left;
+    background-color: #333;
+    padding-left:10vw;
+    padding-top: 3vw;
+    position: absolute;
+    bottom: 0;
+    left:0;
+    right:0;
+    padding-right: 10vw;
+    border: 10px solid ;
+}
+
+.copyright{
+border-top: 1px solid #04AA6D; 
 }
